# -ROS2-

./: .gitignore
src/robot_platform_bringup/: package.xml  setup.cfg  setup.py
src/robot_platform_bringup/launch/: platform_gazebo_classic.launch.py  platform_minimal.launch.py  platform_v3_sim.launch.py
src/robot_platform_core/: package.xml  setup.cfg  setup.py
src/robot_platform_core/robot_platform_core/: alert_monitor_node.py  fake_robot_node.py  task_manager_node.py
src/robot_platform_description/: CMakeLists.txt  package.xml
src/robot_platform_description/urdf/: platform_robot.urdf.xacro
src/robot_platform_description/worlds/: platform_demo.world
src/robot_platform_interfaces/: CMakeLists.txt  package.xml
src/robot_platform_interfaces/msg/: RobotStatus.msg  TaskCommand.msg  TaskState.msg
src/robot_platform_interfaces/srv/: SubmitTask.srv
src/robot_platform_sim/: package.xml  setup.cfg  setup.py
src/robot_platform_sim/robot_platform_sim/: simple_executor_node.py  status_adapter_node  status_adapter_node.py
study/: docket.md  gdb.md
tools/dashboard_api/: README.md  main.py  requirements.txt  ros_bridge.py
tools/dashboard_qt/: CMakeLists.txt  README.md  alerts_page.ui  alertspage.cpp  alertspage.h  dashboardclient.cpp  dashboardclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overview_page.ui  overviewpage.cpp  overviewpage.h  resizehandle.cpp  resizehandle.h  settings_page.ui  settingspage.cpp  settingspage.h  tasks_page.ui  taskspage.cpp  taskspage.h  trajectoryview.cpp  trajectoryview.h
